# statistical_arbitrage

./: .gitignore  CLAUDE.md  LICENSE  README.md  masters_meets_prado_portfolio.ipynb  ml_pairs_trading.ipynb  pyproject.toml
.claude/: settings.json
projects/attention_factors_stat_arb/: README.md
projects/attention_factors_stat_arb/notebooks/: attention_factors_stat_arb.ipynb
projects/enhancing_ts_mom_using_dnn/: README.md
projects/enhancing_ts_mom_using_dnn/notebooks/: deep_momentum_networks_impl.ipynb  deep_momentum_networks_impl_v2.ipynb
projects/learning_to_rank/: README.md
projects/learning_to_rank/notebooks/: ltr_cross_sectional_momentum.ipynb  ltr_cross_sectional_momentum_v1.1.ipynb  ltr_cross_sectional_momentum_v1.ipynb  ltr_cross_sectional_momentum_v2.1.ipynb  ltr_cross_sectional_momentum_v2.ipynb  ltr_cross_sectional_momentum_v3.ipynb  ltr_cross_sectional_momentum_v4.ipynb
projects/masters_meets_prado_portfolio/: README.md
projects/ml_pairs_trading/: README.md
projects/ml_technical_analysis_sp500/: README.md
projects/ml_technical_analysis_sp500/notebooks/: ml_technical_analysis_sp500.ipynb
projects/momentum_transformer/: README.md
projects/momentum_transformer/notebooks/: momentum_transformer.ipynb
projects/systematic_etf_factor_strategies/: README.md
projects/systematic_etf_factor_strategies/notebooks/: systematic_etf_factor_strategies_impl.ipynb
