[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-research"
version = "0.1.0"
description = "Shared utilities for research notebooks in this repo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "statsmodels",
  "matplotlib",
  "seaborn",
  "pyarrow",
  "yfinance",
  "tqdm",
  "torch",
  "torchvision",
  "pydantic",
  "pyyaml",
]

[project.optional-dependencies]
dev = [
  "ipykernel",
  "jupyter",
  "pytest",
  "ruff",
  "mypy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
